--- a/css/page.css
+++ b/css/page.css
@@ -15,91 +15,48 @@ body{
     overflow: hidden;
 }
 .grid {
-    margin-top:5%;
-    margin-left:5%;
+    margin-top:10%;
+    margin-left:10%;
 }
 
 .left-side {
     position: fixed;
+    
+    /* text-align: left; */
+    /* color :#fdfdfd3d;  */
+}
+.left-side p {
+    margin : 0.4vw;    
+}
+.left-side button {
     font-family: SegoeUI;
     font-size: 2vw;
     font-weight: 600;
-    text-align: left;
-    color :#fdfdfd3d; 
+    align-items: center;
+    display: inline-block;
+    padding: 1vh 2vw;
+    border : none;
+    background-color:transparent;
+    color: #fdfdfd3d;
+    text-align: center; 
 }
-.left-side p {
-    margin : 0.4vw;  
-    
+.left-side button:hover {
+    background-color:transparent;
+    color:white;
 }
-.no_mark{
-    color :#fdfdfd3d; 
-}
-.mark {
-    color : white;
-}
-
-
-
 
 /* right side start */
 .right-side {
-    display: grid;
-    margin-left:7.81vw;
-    grid-template-rows: 1000px 1000px 1000px 1000px 1000px 1000px;
-}
-#right-side-0{
-    margin-top:5%;
+    margin-left:25vw;
+    padding-top :0.5vh;
+    color: white;
     font-family: SegoeUI;
     font-size: 1.76vw;
     font-weight: 600;
-    text-align : left;
+    text-align : left;   
 }
-#right-side-0 p{
-    margin : 0.4vw;
-    margin-left: 17.58vw;
+.right-side p {
+     margin-top : 0.8vw;    
 }
 
-#right-side-1{
-    margin-top:5%;
-    font-family: SegoeUI;
-    font-size: 1.76vw;
-    font-weight: 600;
-    text-align : left;
-}
-#right-side-1 p{
-    margin : 0.4vh;
-    margin-left: 17.58vw;
-}
-#right-side-2{
-    margin-top:5%;
-    font-family: SegoeUI;
-    font-size: 1.76vw;
-    font-weight: 600;
-    text-align : left;
-}
-#right-side-2 p{
-    margin : 0.4vw;
-    margin-left: 17.58vw;
-}
-#right-side-3{
-    margin-top:5%;
-    font-family: SegoeUI;
-    font-size: 1.76vw;
-    font-weight: 600;
-    text-align : left;
-}
-#right-side-3 p{
-    margin : 0.4vw;
-    margin-left: 17.58vw;
-}
-#right-side-4{
-    margin-top:5%;
-    font-family: SegoeUI;
-    font-size: 15.625vw;
-    font-weight: 300;
-    text-align : left;
-}
-#right-side-4 p{
-    margin : 0.4vw;
-    margin-left: 17.58vw;
-}
+
