--- a/css/page.css
+++ b/css/page.css
@@ -3,17 +3,6 @@ body{
     padding: 0px; margin: 0px; 
 }
 
-#videobcg {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    min-width: 100%;
-    min-height: 0%;
-    width: 100%;
-    height: auto;
-    z-index: -1;
-    overflow: hidden;
-}
 .grid {
     margin-top:10%;
     margin-left:10%;
@@ -58,5 +47,30 @@ body{
 .right-side p {
      margin-top : 0.8vw;    
 }
+.box4 a{
+    color:white;
+}
 
 
+@media screen and (max-width: 768px) {
+.grid {
+    margin-top:10%;
+    margin-left:0;
+}
+.left-side {
+     position: relative;
+     text-align: center;
+        
+}
+.left-side p {
+    font-size:3vh; 
+    margin :0;
+}
+.right-side {
+    margin-top:100px;
+    font-size : 2vh;
+    margin-left:0;
+    text-align:center;
+}
+
+}
