ga적용 최종끝

--- a/css/new.css
+++ b/css/new.css
@@ -104,7 +104,24 @@ input {
     text-align : center;
 }
   
+@media screen and (max-width: 768px) {
 
+    body{
+        margin-top: 20vh;
+    }
+    #videobcg {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        min-width: 0;
+        min-height: 0%;
+        width: 100vw;
+        height: 0;
+        z-index: -1;
+        overflow: hidden;
+    }
+
+}
   
 
   
