--- a/css/page.css
+++ b/css/page.css
@@ -50,11 +50,14 @@ body{
 .box4 a{
     color:white;
 }
-
+:focus {
+    outline:none;
+    color: white;
+}
 
 @media screen and (max-width: 768px) {
 .grid {
-    margin-top:10%;
+    margin-top:1vh;
     margin-left:0;
 }
 .left-side {
@@ -66,9 +69,21 @@ body{
     font-size:3vh; 
     margin :0;
 }
+.left-side button {
+    font-family: SegoeUI;
+    font-size: 2.5vh;
+    font-weight: 600;
+    align-items: center;
+    display: inline-block;
+    padding: 1vh 0.5vh;
+    border : none;
+    background-color:transparent;
+    color: #fdfdfd3d;
+    text-align: center; 
+}
 .right-side {
-    margin-top:100px;
-    font-size : 2vh;
+    margin-top:1.5vh;
+    font-size : 2.5vh;
     margin-left:0;
     text-align:center;
 }
